# twoptimizer

./: .gitignore  CMakeLists.txt  MIGRATION.md  README.md  README_CPP.md  SECURITY.md  attila.py  attila_problem.lp  build.sh  game.py  pyproject.toml  requirements.txt  rome2.py  twoptimizer.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cpp-build.yml
data/attila/: building_effects_junction_tables.tsv  cultures_subcultures_table.tsv  provinces.tsv  region_to_provinces_junctions_table.tsv  regions.tsv  start_pos_region_slot_templates_tables.tsv
data/rome2/: building_effects_junction_tables.tsv  factions_table.tsv  region_to_provinces_junctions_tables.tsv  start_pos_region_slot_templates_tables.tsv
engine/: bases.py  building.py  entity.py  enums.py  games.py  problem.py  province.py  region.py  solver.py  solver_ortools.py  solver_pulp.py  utils.py
engine/filters/: filter.py  filter_attila.py  filter_building.py  filter_rome2.py  utils.py
engine/models/: entity_interface.py  game.py  game_attila.py  game_rome2.py  model.py  model_attila.py  model_rome2.py
engine/parser/: Parser.py  parser.py  parser_attila.py  parser_rome2.py
engine/utils/: utils.py
engines/: building.py  effect.py  enums.py  games.py  problem.py  province.py  region.py  utils.py
games/hoi4/: IMPLEMENTATION_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  TODO.md  __init__.py  debug_buildings.py  debug_parser.py  enhanced_state_demo.py  example_usage.py  examples.py  faction.py  optimization_demo.py  region.py  state.py  test_parser.py  test_phase2.py  test_phase3.py
games/hoi4/core/: __init__.py  country.py
games/hoi4/models/: __init__.py  building.py  equipment.py  focus.py  game_date.py  idea.py  modifier.py  production.py
games/hoi4/optimization/: __init__.py  production_optimizer.py
games/hoi4/parsers/: __init__.py  base_parser.py  building_parser.py  focus_parser.py  idea_parser.py
games/smite/: enums.py  god.py  item.py  main.py  optimize.py  spells.py
games/smite/data/: items.py
games/smite/data/gods/: amc.py  charon.py
games/smite/data/items/: absolution.py  abyssal_stone.py  ancile.py  archdruids_fury.py  arondight.py  asi.py  bancrofts_claw.py  berserkers_shield.py  blackthorn_hammer.py  bladed_boomerang.py  bloodforge.py  book_of_thoth.py  brawlers_beat_stick.py  breastplate_of_determination.py  breastplate_of_regrowth.py  breastplate_of_vigilance.py  caduceus_club.py  cannoneers_cuirass.py  charons_coin.py  chronos_pendant.py  contagion.py  crimson_claws.py  curseweaver.py  cyclopean_ring.py  initializer.py  initializer_starters.txt  item_absolution.py  item_abyssal_stone.py  item_ancile.py  item_archdruids_fury.py  item_arondight.py  item_asi.py  item_bancrofts_claw.py  item_berserkers_shield.py  item_blackthorn_hammer.py  item_bladed_boomerang.py  item_bloodforge.py  item_book_of_thoth.py  item_brawlers_beat_stick.py  item_breastplate_of_determination.py  (+82 more)
games/smite/smite1/: README.md  enums.py  example_god_builder.py  god.py  god_builder.py  item.py  main.py  optimize.py  spells.py
games/smite/smite1/data/: items.py
games/smite/smite1/data/gods/: __init__.py  all_gods.py  amc.py  charon.py  gods_data.csv  gods_loader.py
games/smite/smite1/data/items/: initializer.py  initializer_items.txt  item_absolution.py  item_abyssal_stone.py  item_ancile.py  item_archdruids_fury.py  item_arondight.py  item_asi.py  item_bancrofts_claw.py  item_berserkers_shield.py  item_blackthorn_hammer.py  item_bladed_boomerang.py  item_bloodforge.py  item_book_of_thoth.py  item_brawlers_beat_stick.py  item_breastplate_of_determination.py  item_breastplate_of_regrowth.py  item_breastplate_of_vigilance.py  item_caduceus_club.py  item_cannoneers_cuirass.py  item_charons_coin.py  item_chronos_pendant.py  item_contagion.py  item_crimson_claws.py  item_curseweaver.py  item_cyclopean_ring.py  item_dawnbringer.py  item_demon_blade.py  item_demonic_grip.py  item_devoted_deathbringer.py  item_devourers_gauntlet.py  item_divine_ruin.py  item_dominance.py  item_doom_orb.py  item_duality.py  item_emperors_armor.py  item_erosion.py  item_ethereal_staff.py  item_fae_blessed_hoops.py  item_fail_not.py  (+52 more)
games/tw/: building.py  entity.py  enums.py  games.py  problem.py  province.py  region.py  solver.py  solver_ortools.py  solver_pulp.py
games/tw/attila/: main.py
games/tw/attila/data/: building_culture_variants_table.tsv  building_effects_junction_table.tsv  factions_table.tsv
games/tw/filters/: filter.py  filter_attila.py  filter_rome2.py
games/tw/models/: entity_interface.py  game.py  game_attila.py  game_rome2.py  model_attila.py  model_rome2.py
games/tw/parser/: parser.py  parser_attila.py  parser_rome2.py
games/tw/rome2/: main.py
games/tw/rome2/data/: building_culture_variants_table.tsv  cultures_subcultures_table.tsv
include/hoi4/: models.h
include/smite/: god.h  god_builder.h  item.h
include/solver/: solver.h  solver_ortools.h
include/tw/: building.h  entity.h  problem.h  province.h
src/: main.cpp  wasm_bindings.cpp
src/hoi4/: models.cpp
src/smite/: god.cpp  god_builder.cpp  item.cpp
src/solver/: solver.cpp  solver_ortools.cpp
src/tw/: building.cpp  effect.cpp  entity.cpp  problem.cpp  province.cpp
tests/: CMakeLists.txt  result_fertility_0_ere.txt  result_fertility_5_ere.txt  test_attila_regions.py  test_god_builder.py  test_hoi4.cpp  test_hoi4.py  test_hoi4_phase2.py  test_hoi4_phase3.py  test_hoi4_phase4.py  test_region.py  test_smite.cpp  test_solver.cpp  test_tw.cpp
